Align the checkboxes correctly

--- a/querki/scalajvm/public/stylesheets/main.css
+++ b/querki/scalajvm/public/stylesheets/main.css
@@ -555,6 +555,10 @@ body {
   list-style-type: none;
 }
 
+._checkOption {
+  vertical-align: top;
+}
+
 /****************************
  * Error styles
  */
